--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,95 @@
-button {
-    background: blue !important;
+body {
+    background-color: rgba(108,122,137);
+    --default-text-color: white;
+    --button-color: red;
+    width: 300px;
+    height: 500px;
+    box-shadow: 0px 0px 10px black;
+}
+
+.sign-in-main{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--bg-color);
+    height: 100%;
+    width: 100%;
+    color: var(--default-text-color);
+    align-items: center;
+    justify-content: center;
+}
+
+.page-header{
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 10%;
+}
+
+label{
+    width: 20vw;
+    text-align: right;
+    font-size: 15px;
+    padding-right: 5vw;
+}
+
+input{
+    border-radius: 10px;
+    background-color: lightgray;
+    width: 60vw;
+    height: 8vw;
+    outline: none;
+}
+
+button{
+    background-color: var(--button-color);
+    color: black;
+    border-radius: 15px;
+    width: 60vw;
+    height: 6vh;
+    box-shadow: 0px 0px 5px black;
+}
+
+#google-logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 0px 0px 5px black;
+}
+
+.form-info {
+    align-items: center;
+}
+
+#label-ca {
+    margin-top: 10vh;
+    font-size: 15px;
+}
+
+.row-login{
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+}
+
+.row-register {
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+}
+
+#sign-in-btn {
+    margin: 10%;
+}
+
+#sign-up-btn {
+    margin-top: 5%
+}
+
+#create-account-btn {
+    margin-top: 5%;
+    margin-bottom: 10%;
+}
+
+#log-in-btn {
+    margin-top: 5%;
+    margin-bottom: 8%;
 }
